Fix. horizontal scroll hero

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,6 +61,7 @@ yt-vid,
 }
 .slider{
 	width:100vw;
+	max-width:100%;
 	aspect-ratio: 21 / 9;
 	margin:0 auto;
 	overflow: hidden;
